# trailerfin_rust

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  docker-compose.examples.yml  docker-compose.yml
.github/workflows/: docker-release.yaml  release-with-docker.yaml  release.yaml
scripts/: build-docker.sh
src/: caching.rs  configuration.rs  lib.rs  main.rs  schedulers.rs  scrapers.rs
src/caching/: redb_database.rs  tmdb_to_imdb_cache.rs
src/config/: config.rs
src/configuration/: configuration_provider.rs
src/request_clients/: mod.rs  rate_limited_client.rs
src/request_clients/imdb_client/: imdb_request_client.rs  mod.rs
src/request_clients/request_errors/: error.rs  server_body_error.rs
src/request_clients/tmdb_client/: external_ids_endpoints.rs  mod.rs  tmdb_request_client.rs
src/scheduler/: schedule.rs
src/schedulers/: scraping_scheduler.rs  traits.rs  types.rs
src/scrapers/: imdb_trailers.rs  media_directories.rs  tmdb_trailers.rs  traits.rs
src/trailers/: scraper.rs
src/utils/: empty_strings.rs
tests/: test_config.rs  test_create_update.rs  test_imdb_create_update.rs  test_scheduler.rs  test_scrape_scheduler.rs  test_strm_expiry.rs
