[package]
name = "trailerfin_rust"
version = "1.0.1"
edition = "2021"

[dependencies]
config = { version = "0.15.11", features = ["serde_json"] }
walkdir = "2.5.0"
regex = "1.11.1"
reqwest = { version = "0.12.19", default-features = false, features = ["rustls-tls", "json"] }
scraper = "0.23.1"
serde_json = "1.0.140"
url = "2.5.4"
tracing = "0.1.41"
tokio = { version = "1.45.1", features = ["full"] }
tokio-cron-scheduler = "0.14.0"
anyhow = "1.0.98"
lazy_static = "1.5.0"
tempfile = "3.20.0"
serde = { version = "1.0.219", features = ["derive"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures = "0.3.31"

[dev-dependencies]
serial_test = "3.2.0"